# tree-sitter-readline

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  package-lock.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-readline.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_readline/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterReadlineTests/: TreeSitterReadlineTests.swift
src/: grammar.json  parser.c
