[package]
name = "tree-sitter-readline"
description = "A Tree-sitter parser for GNU Readline"
version = "1.1.1"
authors = ["Riley Bruins"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "readline"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/tree-sitter-grammars/tree-sitter-readline"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
